--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,13 @@
     </head>
 
     <body>
-        <h1>olen cia</h1>
+        <h1>Alueet testattavana</h1>
+        
+        <ul>
+            <li th:each="alue: ${alueet}">
+                <span th:text="${alue.nimi}">testialue</span>
+            </li>
+        </ul>
         <iframe width="420" height="315" 
                 src="https://www.youtube-nocookie.com/embed/SkyuAsT26ik" frameborder="0" >
         </iframe>
