--- a/src/main/resources/templates/alueet.html
+++ b/src/main/resources/templates/alueet.html
@@ -5,6 +5,9 @@
         <meta charset="utf-8" />
     </head>
     <body>
+        <iframe width="420" height="315" 
+                src="https://www.youtube-nocookie.com/embed/SkyuAsT26ik" frameborder="0" >
+        </iframe>
         <ul>
             <li th:each="alue: ${alueet}">
                 <span th:text="${alue.nimi}">nimi</span>
